improve cmake installation

--- a/libulog/CMakeLists.txt
+++ b/libulog/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.15)
 project(ulog VERSION 1.0)
 
+include(CMakePackageConfigHelpers)
+include(GNUInstallDirs)
+
 set(LIB_SOURCES
         ulog_read.c 
         ulog_write.c
@@ -26,9 +29,16 @@ else()
     message("Set up rpath not defined!")
 endif()
 
+set(LIBULOG_HEADERS )
+list(APPEND LIBULOG_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/ulog.h")
+list(APPEND LIBULOG_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/ulograw.h")
+
 #option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
 set_target_properties(${PROJECT_NAME} PROPERTIES
                     POSITION_INDEPENDENT_CODE ${BUILD_SHARED_LIBS}
+)
+set_target_properties(${PROJECT_NAME} PROPERTIES
+                    PUBLIC_HEADER "${LIBULOG_HEADERS}"
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
@@ -45,10 +55,30 @@ target_link_libraries(${PROJECT_NAME}
                       pthread
 )
 
-
 install(TARGETS ${PROJECT_NAME}
-        EXPORT ${PROJECT_NAME}-targets
-        ARCHIVE DESTINATION lib
-        LIBRARY DESTINATION lib
-        RUNTIME DESTINATION bin
-        )
+    EXPORT ${PROJECT_NAME}-targets
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} ${CMAKE_INSTALL_INCLUDEDIR}/libulog
+    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
+
+install(EXPORT ${PROJECT_NAME}-targets
+    FILE ${PROJECT_NAME}-targets.cmake
+    NAMESPACE ${PROJECT_NAME}::
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
+)
+
+configure_package_config_file(
+    "${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in"
+    ${PROJECT_BINARY_DIR}/${PROJECT_NAME}-config.cmake
+    INSTALL_DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}"
+)
+
+install(
+    FILES ${PROJECT_BINARY_DIR}/${PROJECT_NAME}-config.cmake
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
+)
+
+install(FILES ${LIBULOG_HEADERS} DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR}/libulog)
